Edits to navbar
In progress

--- a/personal portfolio website/index.html
+++ b/personal portfolio website/index.html
@@ -12,7 +12,7 @@
   <div class="top-nav-bar-parent">
 
     <div class="logo">
-      <img width= 20% src="images/logo.png" alt="Seraphina Morrison logo">
+      <img src="images/logo.png" alt="Seraphina Morrison logo">
     </div>
 
     <div class="top-nav-bar-left">
